testsuite/tests/indexed-types/should_fail/T8227.stderr

T8227.hs:24:27: error:
    • Couldn't match type: Scalar (V a)
                     with: t0 -> t0
      Expected: Scalar (V a)
        Actual: Scalar (V (t0 -> t0)) -> Scalar (V (t0 -> t0))
    • In the expression: arcLengthToParam eps eps
      In an equation for ‘absoluteToParam’:
          absoluteToParam eps seg = arcLengthToParam eps eps
    • Relevant bindings include
        seg :: a (bound at T8227.hs:24:21)
        eps :: Scalar (V a) (bound at T8227.hs:24:17)
        absoluteToParam :: Scalar (V a) -> a -> Scalar (V a)
          (bound at T8227.hs:24:1)

T8227.hs:24:48: error:
    • Couldn't match type ‘t0’ with ‘Scalar (V t0)’
        arising from a type equality Scalar (V a) ~ t0 -> t0
      The type variable ‘t0’ is ambiguous
    • In the second argument of ‘arcLengthToParam’, namely ‘eps’
      In the expression: arcLengthToParam eps eps
      In an equation for ‘absoluteToParam’:
          absoluteToParam eps seg = arcLengthToParam eps eps
